trying a new design - hide old files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 cron/
-adequate.bk.css
-index.bk.html
+
+# old webpage design (darwin tree)
+adequate.bk1.css
+index.bk1.html
+
+# suckless design 
+adequate.bk2.css
+index.bk2.html
+
+# papar-trackr newsletter scripts
 patch_newsletter_header.py
 push-paper-trackr-newsletter.sh
