--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 cron/
 
 # old webpage design (darwin tree)
-adequate.bk1.css
+style.bk1.css
 index.bk1.html
 
 # suckless design 
-adequate.bk2.css
+style.bk2.css
 index.bk2.html
 
 # papar-trackr newsletter scripts
