darker and better html/css

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ index.bk1.html
 style.bk2.css
 index.bk2.html
 
+# purple design 
+style.bk3.css
+index.bk3.html
+
 # papar-trackr newsletter scripts
 patch_newsletter_header.py
 push-paper-trackr-newsletter.sh
