ignore old versions

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ index.bk2.html
 style.bk3.css
 index.bk3.html
 
-# papar-trackr newsletter scripts
+# paper-trackr newsletter scripts
 patch_newsletter_header.py
+convert_newsletter_email_to_website.py
 push-paper-trackr-newsletter.sh
+
+# old newsletter
+newsletter/paper-trackr_newsletter.html
+
+# template for newsletter v2 (dark version)
+newsletter/template_newsletter.html
